--- a/.github/workflows/deployment2.yml
+++ b/.github/workflows/deployment2.yml
@@ -11,6 +11,7 @@ jobs:
       - name: lint
         run: npm run lint
   test: 
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -20,6 +21,7 @@ jobs:
       - name: test
         run: npm test
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
